# unt

./: .gitignore  Dockerfile  README.md  config.ini  pyproject.toml
docs/: feedback.md  plan.md  report.txt  strategy.md
framework/: actions.py  elements.py  utils.py
framework/common/: product_item.py  search_options.py
tests/: conftest.py  test_search.py
tests/api/: search_params.py  test_search.py  test_search_endpoint.py
tests/e2e/: conftest.py  test_search.py
