[tool.poetry]
name = "unity"
version = "0.1.0"
description = ""
authors = ["Dz Sk <dzmitry.skarabahatau@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.1.2"
selenium = "^4.1.5"
requests = "^2.27.1"
bs4 = "^0.0.1"
assertpy = "^1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
